# Diploma

./: pyproject.toml
_project_/: settings.py  urls.py  views.py  widgets.py
_project_/static/css/: style.css
_project_/templates/: _base.html
_project_/templates/forum/: index.html  new_message.html  title.html
_project_/templates/users/: login.html  register.html
apps/forum/: forms.py  models.py  urls.py  views.py
apps/users/: urls.py  views.py
apps/users/migrations/: 0001_initial.py
